# darsh-sood-05e0-splitstreak

./: .env.example  .gitignore  .plan  .prettierignore  .prettierrc.json  README.md  eslint.config.mjs  package-lock.json  package.json
backend/: Cargo.toml  clippy.toml
backend/migrations/: 20260720223500_database_bootstrap.sql  20260720225000_create_users.sql  20260720232000_create_exercises.sql  20260720233000_create_workout_sessions.sql  20260720234000_create_cardio_entries.sql  20260721000500_add_sync_client_ids.sql  20260721002500_create_split_templates.sql  20260721003000_create_user_active_splits.sql
backend/src/: account_recovery.rs  active_splits.rs  auth.rs  auth_middleware.rs  config.rs  dashboard.rs  db.rs  e2e.rs  email.rs  exercise_search.rs  exercises.rs  history.rs  logging.rs  login.rs  main.rs  registration.rs  split_selection.rs  split_templates.rs  splits_library.rs  streak_handler.rs  streaks.rs  sync.rs  users.rs  workouts.rs
frontend/: index.html  package.json  tsconfig.node.json  vite.config.ts
frontend/public/: manifest.webmanifest  offline.html  service-worker.js
frontend/src/: App.tsx  HistoryScreen.tsx  HomeDashboard.tsx  SplitsLibrary.tsx  StreakCalendar.tsx  StreakIndicator.tsx  SyncStatus.tsx  TrendCharts.tsx  apiClient.ts  localStore.ts  main.tsx  registerServiceWorker.ts  styles.css  syncQueue.ts
frontend/src/auth/: AuthContext.tsx  authState.ts  useAuth.ts
frontend/src/logging/: CardioEntry.tsx  ExerciseSearch.tsx  LogScreen.tsx  SetEntry.tsx
scripts/: build-self-hosted.sh  run-self-hosted.sh
